fix: to text wrap for location address, changed to white-space:normal

--- a/client/src/ContactUs.css
+++ b/client/src/ContactUs.css
@@ -86,7 +86,8 @@
 
 .address {
   margin-top: 2em;
-  text-wrap: wrap;
+  /* text-wrap: wrap; */
+  white-space: normal;
 }
 
 .MuiTypography-h4 {
